kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: universal-print
  labels:
    name: universal-print
