kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: printer-portal-frontend-service
  namespace: universal-print
  labels:
    app: printer-portal-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: printer-portal-frontend
