kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: printer-portal-ingress
  namespace: universal-print
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - print-portal.local.flextronassembly.net
      secretName: printer-portal-tls

  rules:
    - host: print-portal.local.flextronassembly.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: printer-portal-frontend-service
                port:
                  number: 80
